# python-ddd

./: .pre-commit-config.yaml  pyproject.toml
src/models/: batch.py
src/tests/: test_allocate.py  test_batches.py
